SERVER-47714 explicitly set the prepare conflict behavior prior to creating a system.profile collection